--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <main>
         <section class="left-container">
             <div class="buttons-wrapper">
-                <div>
+                <div class="selector-wrapper">
                     <label for="selector" id="selector-label">Select:</label>
                     <input type="color" id="selector" name="selector">    
                 </div>
                 <button type="button" id="randomizer">Random</button>
                 <button type="button" id="darkener">Gradient</button>
                 <button type="button" id="eraser">Erase</button>
-                <div>
+                <div class="dimension-wrapper">
                     <label for="dimension" id="dimension-label">100 x 100</label>
                     <input type="range" id="dimension" name="dimension">
                 </div>
