added remote control and drawing board

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <button type="button" id="darkener">Gradient</button>
                 <button type="button" id="eraser">Erase</button>
                 <div class="dimension-wrapper">
-                    <label for="dimension" id="dimension-label">100 x 100</label>
-                    <input type="range" id="dimension" name="dimension">
+                    <label for="dimension" id="dimension-label"></label>
+                    <input type="range" id="dimension" name="dimension" min="1" max="100" value="16">
                 </div>
                 <button type="button" id="sweeper">Clear</button>
             </div>
