--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <button type="button" id="randomizer">Random</button>
                 <button type="button" id="darkener">Gradient</button>
                 <button type="button" id="eraser">Erase</button>
-                <div class="dimension-wrapper">
+                <!-- <div class="dimension-wrapper">
                     <label for="dimension" id="dimension-label"></label>
                     <input type="range" id="dimension" name="dimension" min="1" max="100" value="16">
-                </div>
+                </div> -->
                 <button type="button" id="sweeper">Clear</button>
             </div>
         </section>
@@ -36,8 +36,13 @@
             <div class="grid-wrapper"></div>
             <div class="knob-wrapper">
                 <div class="knob"></div>
+                <div class="dimension-wrapper">
+                    <label for="dimension" id="dimension-label"></label>
+                    <input type="range" id="dimension" name="dimension" min="1" max="100" value="16">
+                </div>
                 <div class="knob"></div>
             </div>
+            
         </section>
     </main>
 </body>
